...
    <string name="track_duration_input_content_description">Input field for track duration</string>

    <!-- BottomBar -->
    <string name="bottom_bar_albums">ALBUMS</string>
    <string name="bottom_bar_artists">ARTISTS</string>
    <string name="bottom_bar_collectors">COLLECTORS</string>
    <string name="bottom_bar_add">ADD</string>

    <!-- AlbumScreen -->
    <string name="album_title">Album Catalog</string>
    <string name="collection">Collection</string>
    <string name="spun">Recently Spun</string>
    <string name="vault">Curated Vault</string>
...
    <string name="follow">Follow</string>
    <string name="favorite_artists">Favorite Artists</string>
    <string name="view_all">VIEW ALL</string>
    <string name="recently_added">Recently Added</string>

    <!-- CreateAlbumScreen -->
    <string name="album_title_required_error">Please type an album title.</string>
    <string name="album_description_required_error">Please type an album description.</string>
    <string name="album_artist_required_error">Please select an artist.</string>
    <string name="album_year_required_error">Please type the album release year.</string>
    <string name="album_genre_required_error">Please select a genre.</string>
    <string name="album_url_required_error">Please insert a valid URL.</string>
    <string name="album_cover_required_error">Please insert the album artwork URL.</string>
    <string name="album_label_required_error">Please select a record label.</string>
    <string name="album_created_success">Album created successfully</string>
    <string name="album_created_success_message">This album has been created successfully. Do you want to see it?</string>

    <string name="new_release_header">New Album</string>
    <string name="save_button">SAVE</string>

    <string name="title_form_header">ALBUM TITLE</string>
    <string name="description_form_header">ALBUM DESCRIPTION</string>
...
    <string name="cover_form_header">ARTWORK URL</string>
    <string name="label_form_header">RECORD LABEL</string>

    <string name="title_placeholder">Title</string>
    <string name="description_placeholder">Description</string>

    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>

</resources>
